Bug 99935 - ruler cannot be hidden
Summary: ruler cannot be hidden
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha1
Hardware: All All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: noRepro:5.1.3.2:Windows10 confirmed:5...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-05-18 15:49 UTC by steve
Modified: 2016-05-19 09:42 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
ruler showing despite not being selected (143.94 KB, image/png)
2016-05-18 15:49 UTC, steve
Details

Note You need to log in before you can comment on or make changes to this bug.
Description steve 2016-05-18 15:49:29 UTC
Created attachment 125153 [details]
ruler showing despite not being selected

Version: 5.2.0.0.alpha1+
Build ID: f688acfdae00ebdd891737e533d54368810185e1
CPU Threads: 4; OS Version: Mac OS X 10.11.5; UI Render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2016-05-18_00:10:47
Locale: de-DE (de.UTF-8)

Reproduce

1. open writer in latest master (date above)
2. hide rulers under View > Rulers

Currently

Top ruler still showing

Expected

All rulers should be hidden.

Can't always rule out user stupidity here, but this looks like a regression to me.
Comment 1 Theodore Matula Jr. 2016-05-18 19:35:22 UTC
I tr
Comment 2 Theodore Matula Jr. 2016-05-18 19:40:17 UTC
I was able to reproduce this on version 5.2.0.0.alpha1+ in Windows 10. I also tested this on Version 5.1.3.2 on Windows 10 and was not able to reproduce this, so I marked this as Regression. When hiding rulers on the latest master, the top horizontal ruler will not be hidden, whether you use CTRL+Shift+R or the button under the view menu.

Steps to Reproduce:
1. Open a new Writer Document in version 5.2.0.0.alpha1+
2. Hide rulers by clicking View>Rulers>Rulers (CTRL+Shift+R)

Expected Result:
All rulers should be hidden

Actual Result:
The top horizontal ruler is not hidden, but all other rulers are.
Comment 3 Commit Notification 2016-05-18 20:47:43 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=77eaa0e4f3727a06a03a0c92b83e9fe2f6a2efb1

tdf#99935 Fix rulers visible state

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 steve 2016-05-19 09:42:03 UTC
Thanks Maxim. Verified.

Version: 5.2.0.0.alpha1+
Build ID: 389d8db4d90d427f886d06c3f7304ad973f0d39c
CPU Threads: 4; OS Version: Mac OS X 10.11.5; UI Render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2016-05-18_22:56:51
Locale: nl-NL (de.UTF-8)