tdf#99935 Fix rulers visible state

regression of 5e54d9e9bc856520808a446f20575e29a50d017b

Change-Id: I7dd032a7bf29ce8387d880c103852846e743b2e7